# probe-guided-inference

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup_runpod.sh
.github/workflows/: ci.yml
benchmark/: aime_loader.py  report.py  routing_eval.py
docs/: ARCHITECTURE.md
probe_weights/: probe_layer16_cp150.pkl
results/: report.md  report_summary.json  routing_eval.json  routing_eval_smoke.json
scripts/: plot_results.py  render_architecture_diagram.py  train_probe.py  verify_setup.py
src/: config.py  gate.py  hf_cache_bridge.py  model_runner.py  probe.py  queue.py  scheduler.py  server.py
tests/: conftest.py  test_gate.py  test_hf_cache_bridge.py  test_probe.py  test_queue.py  test_scheduler_smoke.py
