[project]
name = "probe-guided-inference"
version = "0.1.0"
description = "Routing inference-server requests on a mechanistic interpretability probe's early-convergence prediction"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "torch>=2.1.0",
    "transformers>=5.0.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "benchmark"]
